# PurrfectEngine-old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Todo.txt  build.bat  buildSolution.bat  imgui.ini  premake5.lua
Applications/: premake5.lua
Applications/Editor/: premake5.lua
Core/: CoreLib.vcxproj.filters  premake5.lua
Core/include/PurrfectEngine/: core.h  includes.h  window.h
Core/src/: core.cpp  window.cpp
Libraries/: premake5.lua
assets/models/: cube.fbx  plane.fbx  sphere.fbx
assets/shaders/: compile.bat  frag.spv  hdr.frag  hdr.spv  pbr.frag  pbr.spv  plane.spv  plane.vert  shader.frag  shader.vert  sky.frag  sky.vert  skyFrag.spv  skyVert.spv  vert.spv
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PurrfectEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_vs/core/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  core.vcxproj  core.vcxproj.filters
build_vs/core/Debug/: core.lib
build_vs/core/core.dir/Debug/core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_vs/engine/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  engine.vcxproj  engine.vcxproj.filters
build_vs/engine/engine.dir/Debug/: engine.exe.recipe  engine.ilk
build_vs/engine/engine.dir/Debug/engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_vs/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_vs/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_vs/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
core/: CMakeLists.txt
core/include/PurrfectEngine/: application.hpp  camera.hpp  collection.hpp  components.hpp  core.hpp  cubemap.hpp  discord.hpp  fontManager.hpp  imgui.hpp  light.hpp  loaders.hpp  material.hpp  mesh.hpp  model.hpp  object.hpp  renderer.hpp  scene.hpp  skybox.hpp  textRenderer.hpp  texture.hpp  transform.hpp  utils.hpp  vector.hpp  window.hpp
core/include/PurrfectEngine/input/: input.hpp  inputDefines.hpp
core/include/PurrfectEngine/inputsrc/: input.hpp  inputDefines.hpp
core/src/: application.cpp  cubemap.cpp  imgui.cpp  loaders.cpp  material.cpp  mesh.cpp  moduleLoader.cpp  renderer.cpp  skybox.cpp  texture.cpp  window.cpp
core/src/input/: input.cpp
engine/: CMakeLists.txt
engine/include/: camera.hpp  panels.hpp  renderer.hpp
engine/src/: main.cpp
engine_2d/: CMakeLists.txt
engine_2d/src/: main.cpp
renderer/: CMakeLists.txt
renderer/include/PurrfectEngine/: renderer.h
renderer/src/: renderer.c
test/: CMakeLists.txt
test/src/: main.cpp
(+3 files in other folders)
