file(GLOB_RECURSE ENGINE_SOURCES "src/**.cpp")
add_executable(engine ${ENGINE_SOURCES})
target_include_directories(engine PUBLIC "include/")
target_include_directories(engine PUBLIC "../core/include/")
target_include_directories(engine PUBLIC ${GLFW_INCLUDE_DIRS})
target_link_libraries(engine glfw)
target_link_libraries(engine core)