file(GLOB_RECURSE RENDERER_SOURCES "src/**.c")
add_library(renderer STATIC ${RENDERER_SOURCES} ${IMGUI_FILES})
if(MSVC)
  target_compile_options(renderer PRIVATE /W4 /WX)
else()
  target_compile_options(renderer PRIVATE -Wall -Wextra -Wpedantic -Werror -Wswitch-enum)
endif()
target_include_directories(renderer PUBLIC "./include/" ${DEFAULT_INCLUDES})
target_link_libraries(renderer ${DEFAULT_LIBS})